2012-09-28  Harald Tveit Alvestrand  <harald@alvestrand.no>

        Implement the GetStats interface on PeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=95193

        Reviewed by Adam Barth.

        * DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.cpp:
        (RTCStatsRequestSucceededTask):
        (RTCStatsRequestSucceededTask::RTCStatsRequestSucceededTask):
        (MockWebRTCPeerConnectionHandler::getStats):
        * DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.h:
        (MockWebRTCPeerConnectionHandler):

2012-09-28  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [NRWT] XvfbDriver should choose the next free display
        https://bugs.webkit.org/show_bug.cgi?id=88414

        Reviewed by Dirk Pranke.

        This change how the XvfbDriver choose the next display. Before
        this the choosing are based on the worker number but it caused
        errors when several nrwt run on the same time. This add process
        based free diplay search.

        * Scripts/webkitpy/layout_tests/port/xvfbdriver.py:
        (XvfbDriver.__init__):
        (XvfbDriver._next_free_display):
        (XvfbDriver._start):
        (XvfbDriver.stop):
        * Scripts/webkitpy/layout_tests/port/xvfbdriver_unittest.py:
        (XvfbDriverTest.make_driver):
        (XvfbDriverTest.test_start_no_pixel_tests):
        (XvfbDriverTest.test_start_pixel_tests):
        (XvfbDriverTest.test_start_arbitrary_worker_number):
        (XvfbDriverTest.test_next_free_display):
        (XvfbDriverTest):
        (XvfbDriverTest.test_start_next_worker):

2012-09-28  Huang Dongsung  <luxtella@company100.net>

        [GTK] Enable CSS Shaders layout LayoutTests on GTK+
        https://bugs.webkit.org/show_bug.cgi?id=97821

        Reviewed by Martin Robinson.

        This feature is disabled via Settings by default, but for testing,
        we enable it using layoutTestController.overridePreferences. Add the
        necessary plumbing for DRT.
